--- a/index.html
+++ b/index.html
@@ -22,21 +22,20 @@
       <CENTER><H3><p class="lead">Belum punya akun? ayok buat baru </p></H3></CENTER>
       <CENTER><p><a class="btn btn-secondary" href="#" role="button"  style="background-color: #008f97">Sign up &raquo;</a></p></CENTER>
     </div>
-    <div 
-     class="row text-center" id="">
-      <div class="col-md-3 offset-2">
-        <img src="./kalender.png" alt="" style="width:100px;">
-        <h2>Dapat dipesan untuk beberapa hari ke depan </h2>
-        <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-      </div>
-      <div class="col-md-3">
-        <img src="./uang.png" alt="" style="width:100px;">
-        <h2>Tarif yang Cenderung Lebih Murah</h2>
-        <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-      </div>
-      <div class="col-md-3">
-        <img src="./" alt="" style="width:100px;">
-        <h2>Supir akan menunggu hingga 10 menit dari jam yang di tentukan </h2>
-        <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-      </div>
     </div>
+class="container">
+  <!-- Example row of columns -->
+  <div class="row text-center" id="">
+    <div class="col-md-3 ">
+      <img src="kalender.png" alt="" style="width:100px;">
+      <p>Dapat dipesan untuk beberapa hari ke depan </p>
+    </div>
+    <div class="col-md-3">
+      <img src="uang.png" alt="" style="width:100px;">
+      <p>Tarif yang Cenderung Lebih Murah</p>
+    </div>
+    <div class="col-md-3">
+      img src=waktu.png" alt="" style="width:100px;">
+      <p>Supir akan menunggu hingga 10 menit dari jam yang di tentukan </p>
+    </div>
+  </div>
