--- a/index.html
+++ b/index.html
@@ -22,20 +22,20 @@
       <CENTER><H3><p class="lead">Belum punya akun? ayok buat baru </p></H3></CENTER>
       <CENTER><p><a class="btn btn-secondary" href="#" role="button"  style="background-color: #008f97">Sign up &raquo;</a></p></CENTER>
     </div>
-    </div>
-class="container">
-  <!-- Example row of columns -->
-  <div class="row text-center" id="">
-    <div class="col-md-3 ">
-      <img src="kalender.png" alt="" style="width:100px;">
-      <p>Dapat dipesan untuk beberapa hari ke depan </p>
-    </div>
-    <div class="col-md-3">
-      <img src="uang.png" alt="" style="width:100px;">
-      <p>Tarif yang Cenderung Lebih Murah</p>
-    </div>
-    <div class="col-md-3">
-      img src=waktu.png" alt="" style="width:100px;">
-      <p>Supir akan menunggu hingga 10 menit dari jam yang di tentukan </p>
-    </div>
   </div>
+  <div class="container">
+    <!-- Example row of columns -->
+    <div class="row text-center" id="">
+      <div class="col-md-3 ">
+        <img src="kalender.jpg" alt="" style="width:100px">
+        <p>Dapat dipesan untuk beberapa hari ke depan </p>
+      </div>
+      <div class="col-md-3">
+        <img src="./uang.jpg" alt="" style="width:100px">
+        <p>Tarif yang Cenderung Lebih Murah</p>
+      </div>
+      <div class="col-md-3">
+        <img src="./docs/waktu.jpg" alt="" style="width:100px">
+        <p>Supir akan menunggu hingga 10 menit dari jam yang di tentukan </p>
+      </div>
+    </div>
