--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
     <!-- Example row of columns -->
     <div class="row text-center" id="">
       <div class="col-md-3 ">
-        <img src="kalender.jpg" alt="" style="width:100px">
+        <img src="kalender.png" alt="" style="width:100px">
         <p>Dapat dipesan untuk beberapa hari ke depan </p>
       </div>
       <div class="col-md-3">
-        <img src="./uang.jpg" alt="" style="width:100px">
+        <img src="uang.png" alt="" style="width:100px">
         <p>Tarif yang Cenderung Lebih Murah</p>
       </div>
       <div class="col-md-3">
-        <img src="./docs/waktu.jpg" alt="" style="width:100px">
+        <img src="waktu.png" alt="" style="width:100px">
         <p>Supir akan menunggu hingga 10 menit dari jam yang di tentukan </p>
       </div>
     </div>
