--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <div class="navbar-nav">
         <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
         <a class="nav-link active" href="#">Log in <span class="sr-only">(current)</span></a>
-        <a class="nav-link active" href="#">Sign in <span class="sr-only">(current)</span></a>
+        <a class="nav-link active" href="#">Sign up <span class="sr-only">(current)</span></a>
       </div>
     </div>
   </nav>
