--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
       <div class="navbar-nav">
         <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
         <a class="nav-link active" href="#">Log in <span class="sr-only">(current)</span></a>
+        <button class="btn btn-primary">Login</button> 
+        <a href="index.html"><button class="btn btn-primary">Login</button></a>
         <a class="nav-link active" href="#">Sign up <span class="sr-only">(current)</span></a>
+        <button class="btn btn-primary">Sign up</button> 
+        <a href="index.html"><button class="btn btn-primary">Sign up </button></a>
       </div>
     </div>
   </nav>
