--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-        <a class="nav-link active" href="#">Log in <span class="sr-only">(current)</span></a>
-        <a href="index.html"><button class="btn btn-primary">Login</button></a>
-        <a class="nav-link active" href="#">Sign up <span class="sr-only">(current)</span></a>
-        <a href="index.html"><button class="btn btn-primary">Sign up </button></a>
+        <a class="nav-link active" href="index.html">Log in <span class="sr-only">(current)</span></a>
+        <a class="nav-link active" href="index.html">Sign up <span class="sr-only">(current)</span></a>
       </div>
     </div>
   </nav>
