--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-        <a class="nav-link active" href="index.html">Log in <span class="sr-only">(current)</span></a>
-        <a class="nav-link active" href="index.html">Sign up <span class="sr-only">(current)</span></a>
+        <a class="nav-link active" href="login.html">Log in <span class="sr-only">(current)</span></a>
+        <a class="nav-link active" href="signup.html">Sign up <span class="sr-only">(current)</span></a>
       </div>
     </div>
   </nav>
