--- a/login.html
+++ b/login.html
@@ -21,4 +21,5 @@
           <input type="password" class="form-control" id="exampleInputPassword1">
         </div>
         <button type="submit" class="btn btn-primary">Log in</button>
+        <a href="isilogin.html"><button class="btn btn-primary">Login</button></a>
       </form>
