--- a/login.html
+++ b/login.html
@@ -21,5 +21,9 @@
           <input type="password" class="form-control" id="exampleInputPassword1">
         </div>
         <button type="submit" class="btn btn-primary">Log in</button>
-        <a href="isilogin.html"><button class="btn btn-primary">Login</button></a>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-link active" href="isilogin.html"> Login <span class="sr-only">(current)</span></a>
+        </div>
       </form>
