--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
     </div>
   </nav>
   <div class="jumbotron jumbotron-fluid " style="background-color: #f48220">
-    <form>
+    <form>action="isilogin.html">
         <div class="form-group">
           <label for="exampleInputEmail1">Email </label>
           <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
@@ -21,9 +21,4 @@
           <input type="password" class="form-control" id="exampleInputPassword1">
         </div>
         <button type="submit" class="btn btn-primary">Log in</button>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-link active" href="isilogin.html"> Login <span class="sr-only">(current)</span></a>
-        </div>
       </form>
