--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
     </div>
   </nav>
   <div class="jumbotron jumbotron-fluid " style="background-color: #f48220">
-    <form>action="isilogin.html">
+    <form action="isilogin.html">
         <div class="form-group">
           <label for="exampleInputEmail1">Email </label>
           <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
