--- a/booking.html
+++ b/booking.html
@@ -12,7 +12,7 @@
     </div>
   </nav>
   <div class="jumbotron jumbotron-fluid " style="background-color: #f48220">
-    <form>
+    <form action="kodebook.html">
         <div class="form-group">
           <label for="exampleInputEmail1">Atur Jadwal Penjemputan</label>
           <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
