--- a/isilogin.html
+++ b/isilogin.html
@@ -2,7 +2,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-info">
     <a class="navbar-brand" href="#">
       <img src="pickupln.jpg" alt="" style="width:50px;"> PICKUPLN
-    
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -12,19 +11,12 @@
     </div>
   </nav>
   <div class="jumbotron jumbotron-fluid " style="background-color: #f48220">
-    <form>
+    <form action="pesansekarang.html>
         <CENTER><H3><p class="lead">mau kemana anda hari ini?</p></H3></CENTER>
         <div class="form-group">
-          <label for="exampleInputEmail1">Pesan Sekarang</label>
-          <a class="nav-link active" href="pesansekarang.html">pesansekarang<span class="sr-only">(current)</span></a>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+            <a href="pesansekarang.html" class="btn btn-primary btn-lg"> Pesan Sekarang </a>
         </div>
-
-
         <div class="form-group">
-          <label for="exampleInputPassword1">Untuk Nanti</label>
-          <a class="nav-link active" href="booking.html">booking<span class="sr-only">(current)</span></a>
-          <input type="password" class="form-control" id="exampleInputPassword1">
+            <a href="booking.html" class="btn btn-primary btn-lg"> Untuk Nanti </a>
         </div>
-        <button type="submit" class="btn btn-primary">Pesan</button>
       </form>
