--- a/kodebook.html
+++ b/kodebook.html
@@ -12,4 +12,14 @@
     </div>
   </nav>
   <div class="jumbotron jumbotron-fluid " style="background-color: #f48220">
-<input class="form-control" type="text" placeholder="Kode Booking Anda VXYHSD" aria-label="readonly input example" readonly>
+    <div class="padding container-fluid d-flex justify-content-center">
+        <div class="col-md-4">
+            <div class="free-quote bg-dark h-100">
+                <h2 class="my-4 heading text-center">Masukkan Kode Voucher</h2>
+                <form method="post">
+                    <div class="form-group"> <label for="fq_name"></label> <input type="text" class="form-control btn-block" id="fq_name" name="fq_name" placeholder=""> </div>
+                    <div class="form-group"> <input type="submit" class="btn btn-primary text-white py-2 px-4 btn-block" value="SUBMIT"> </div>
+                </form>
+            </div>
+        </div>
+    </div>
