--- a/login.html
+++ b/login.html
@@ -1,7 +1,14 @@
+<link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+<Link rel="stylesheet" href="foler/folder/animate.min.css">
+  
 <nav class="navbar navbar-expand-lg navbar-light bg-info">
-    <a class="navbar-brand" href="#">
-      <img src="pickupln.jpg" alt="" style="width:50px;"> PICKUPLN
+    <a class="animate__animated animate__bounce navbar-brand" href="#">
+      <img class="animate__animated animate__bounce animate__slower"src="pickupln.jpg" alt="" style="width:50px;"> PICKUPLN 
+      <Link rel="stylesheet" href="css/animate.min.css">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
