--- a/pesansekarang.html
+++ b/pesansekarang.html
@@ -12,17 +12,14 @@
     </div>
   </nav>
   <div class="jumbotron jumbotron-fluid " style="background-color: #f48220">
-    <form>
+    <form action="ditemukan.html">
         <div class="form-group">
           <label for="exampleInputEmail1">Jemput di</label>
           <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
         </div>
-
-        
         <div class="form-group">
           <label for="exampleInputPassword1">Tujuan</label>
           <input type="password" class="form-control" id="exampleInputPassword1">
         </div>
         <button type="submit" class="btn btn-primary">Pesan Sekarang</button>
-        <a class="nav-link active" href="ditemukan.html">Lditemukan <span class="sr-only">(current)</span></a>
       </form>
