--- a/kodenya.html
+++ b/kodenya.html
@@ -7,6 +7,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-info">
     <a class="navbar-brand" href="#">
       <img src="pickupln.jpg" alt="" style="width:50px;"> PICKUPLN
+    
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -16,14 +17,8 @@
     </div>
   </nav>
   <div class="jumbotron jumbotron-fluid " style="background-color: #f48220">
-    <div class="container">
-       <CENTER><H3><p class="lead animate__animated animate__backInLeft ">Mau pergi kemana anda hari ini ? </p></H3></CENTER>
-    </div>
-    <form action="pesansekarang.html">
-        <div class="form-group animate__animated animate__pulse">
-          <CENTER><p><a href="pesansekarang.html" class="btn btn-primary btn-lg"> Pesan Sekarang </a></CENTER>
-        </div>
-        <div class="form-group animate__animated animate__pulse">
-          <CENTER><p><a href="booking.html" class="btn btn-primary btn-lg"> Booking </a></CENTER>
-        </div>
-      </form>
+        <input class="form-control animate__animated animate__pulse" type="text" placeholder="Kode Voucher Anda XVXXWYZ" aria-label="readonly input example" readonly>
+<p>
+    
+</p>
+        <CENTER><p><a href="kodebook.html" class="btn btn-primary btn-lg"> Lanjut</a></CENTER>
