--- a/login.html
+++ b/login.html
@@ -6,8 +6,7 @@
 <Link rel="stylesheet" href="foler/folder/animate.min.css">
   
 <nav class="navbar navbar-expand-lg navbar-light bg-info">
-    <a class="animate__animated animate__bounce navbar-brand" href="#">
-      <img class="animate__animated animate__bounce animate__slower"src="pickupln.jpg" alt="" style="width:50px;"> PICKUPLN 
+      <img src="pickupln.jpg" alt="" style="width:50px;"> PICKUPLN 
       <Link rel="stylesheet" href="css/animate.min.css">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -19,13 +18,13 @@
   </nav>
   <div class="jumbotron jumbotron-fluid " style="background-color: #f48220">
     <form action="isilogin.html">
-        <div class="form-group">
+        <div class="form-group animate__animated animate__bounce animate__slower">
           <label for="exampleInputEmail1">Email </label>
           <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
         </div>
-        <div class="form-group">
+        <div class="form-group animate__animated animate__bounce animate__slower">
           <label for="exampleInputPassword1">Password</label>
           <input type="password" class="form-control" id="exampleInputPassword1">
         </div>
-        <button type="submit" class="btn btn-primary">Log in</button>
+        <CENTER> <button type="submit" class="btn btn-primary animate__animated animate__backInUp">Log in</button> </CENTER>
       </form>
