--- a/pesansekarang.html
+++ b/pesansekarang.html
@@ -1,4 +1,9 @@
+<link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+<Link rel="stylesheet" href="foler/folder/animate.min.css">
 <nav class="navbar navbar-expand-lg navbar-light bg-info">
     <a class="navbar-brand" href="#">
       <img src="pickupln.jpg" alt="" style="width:50px;"> PICKUPLN
@@ -13,13 +18,13 @@
   </nav>
   <div class="jumbotron jumbotron-fluid " style="background-color: #f48220">
     <form action="ditemukan.html">
-        <div class="form-group">
-          <label for="exampleInputEmail1">Jemput di</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+        <div class="form-group animate__animated animate__backInLeft">
+          <label for="exampleInput">Jemput di</label>
+          <input type="address" class="form-control" id="exampleInput" aria-describedby="adressHelp">
         </div>
-        <div class="form-group">
-          <label for="exampleInputPassword1">Tujuan</label>
-          <input type="password" class="form-control" id="exampleInputPassword1">
+        <div class="form-group animate__animated animate__backInRight">
+          <label for="exampleInput">Tujuan</label>
+          <input type="address" class="form-control" id="exampleInput" aria-describedby="adressHelp">
         </div>
-        <button type="submit" class="btn btn-primary">Pesan Sekarang</button>
+        <CENTER> <button type="submit" class="btn btn-primary animate__animated animate__backInUp">Pesan Sekarang</button> </a></CENTER>
       </form>
