--- a/booking.html
+++ b/booking.html
@@ -1,4 +1,9 @@
+<link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+<Link rel="stylesheet" href="foler/folder/animate.min.css">
 <nav class="navbar navbar-expand-lg navbar-light bg-info">
     <a class="navbar-brand" href="#">
       <img src="pickupln.jpg" alt="" style="width:50px;"> PICKUPLN
@@ -12,18 +17,18 @@
     </div>
   </nav>
   <div class="jumbotron jumbotron-fluid " style="background-color: #f48220">
-    <form action="kodebook.html">
-        <div class="form-group">
-          <label for="exampleInputEmail1">Atur Jadwal Penjemputan</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-        </div>
-        <div class="form-group">
-            <label for="exampleInputPassword1">Jemput di</label>
-            <input type="password" class="form-control" id="exampleInputPassword1">
-          </div>
-        <div class="form-group">
-          <label for="exampleInputPassword1">Tujuan</label>
-          <input type="password" class="form-control" id="exampleInputPassword1">
-        </div>
-        <button type="submit" class="btn btn-primary">Booking Sekarang</button>
-      </form>
+    <form action="kodenya.html">
+      <div class="form-group animate__animated animate__fadeInLeftBig">
+        <label for="exampleInput">Atur Jadwal Penjemputan</label>
+        <input type="datetime" class="form-control" id="exampleInput" aria-describedby="adressHelp">
+      </div>
+      <div class="form-group animate__animated animate__fadeInRightBig">
+        <label for="exampleInput">Jemput di</label>
+        <input type="address" class="form-control" id="exampleInput" aria-describedby="adressHelp">
+      </div>
+      <div class="form-group animate__animated animate__fadeInUpBig">
+        <label for="exampleInput">Tujuan</label>
+        <input type="address" class="form-control" id="exampleInput" aria-describedby="adressHelp">
+      </div>
+    <CENTER> <button type="submit" class="btn btn-primary animate__animated animate__pulse">Booking</button></a></CENTER>
+    </form>
