--- a/ditemukan.html
+++ b/ditemukan.html
@@ -1,4 +1,9 @@
+<link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+<Link rel="stylesheet" href="foler/folder/animate.min.css">
 <nav class="navbar navbar-expand-lg navbar-light bg-info">
     <a class="navbar-brand" href="#">
       <img src="pickupln.jpg" alt="" style="width:50px;"> PICKUPLN
@@ -12,4 +17,4 @@
     </div>
   </nav>
   <div class="jumbotron jumbotron-fluid " style="background-color: #f48220">
-<input class="form-control" type="text" placeholder="Driver Anda Ditemukan" aria-label="readonly input example" readonly>
+<input class="form-control animate__animated animate__backInDown" type="text" placeholder="Driver Anda Ditemukan" aria-label="readonly input example" readonly>
