--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
+<link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-<Link rel="stylesheet" href="css/animate.min.css">
+<Link rel="stylesheet" href="foler/folder/animate.min.css">
+  
 <nav class="navbar navbar-expand-lg navbar-light bg-info">
-    <a class="navbar-brand" href="#">
       <img src="pickupln.jpg" alt="" style="width:50px;"> PICKUPLN
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -9,33 +13,32 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-        <a class="nav-link active" href="login.html">Log in <span class="sr-only">(current)</span></a>
-        <a class="nav-link active" href="signup.html">Sign up <span class="sr-only">(current)</span></a>
+        <a class="nav-link active animate__animated animate__zoomIn" href="index.html">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link active animate__animated animate__zoomIn" href="login.html">Log in <span class="sr-only">(current)</span></a>
+        <a class="nav-link active animate__animated animate__zoomIn" href="signup.html">Sign up <span class="sr-only">(current)</span></a>
       </div>
     </div>
   </nav>
   <div class="jumbotron jumbotron-fluid " style="background-color: #f48220">
     <div class="container">
-      <CENTER><h1 class="display-4">PICKUPLN</h1></CENTER>
-      <CENTER><H3><p class="lead">Layanan antar jemput taksi bandara untuk mahasiswa ITPLN</p></H3></CENTER>
-      <CENTER><p><a class="btn btn-secondary" href="#" role="button"  style="background-color: #008f97">Log in &raquo;</a></p></CENTER>
-      <CENTER><H3><p class="lead">Belum punya akun? ayok buat baru </p></H3></CENTER>
-      <CENTER><p><a class="btn btn-secondary" href="#" role="button"  style="background-color: #008f97">Sign up &raquo;</a></p></CENTER>
-    </div>
+      <CENTER><h1 class ="display-4 animate__animated animate__bounceInUp">PICKUPLN</h1></CENTER>
+      <CENTER><H3><p class="lead animate__animated animate__backInDown">Layanan antar jemput taksi bandara untuk mahasiswa ITPLN</p></H3></CENTER>
+      <CENTER><p><a href="login.html" class="btn btn-primary btn-lg animate__animated animate__zoomIn"> Log In </a></CENTER>
+      <CENTER><H3><p class="lead animate__animated animate__backInDown">Belum punya akun? ayok buat baru </p></H3></CENTER>
+      <CENTER><p><a href="signup.html" class="btn btn-primary btn-lg animate__animated animate__zoomIn"> Sign Up </a></CENTER>
   </div>
   <div class="container">
     <!-- Example row of columns -->
     <div class="row text-center" id="">
-      <div class="col-md-3 ">
+      <div class="col-md-3 animate__animated animate__backInLeft ">
         <img src="kalender.png" alt="" style="width:100px">
         <p>Dapat dipesan untuk beberapa hari ke depan </p>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-3 animate__animated animate__backInUp">
         <img src="uang.png" alt="" style="width:100px">
         <p>Tarif yang Cenderung Lebih Murah</p>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-3 animate__animated animate__backInRight">
         <img src="waktu.png" alt="" style="width:100px">
         <p>Supir akan menunggu hingga 10 menit dari jam yang di tentukan </p>
       </div>
