--- a/kodebook.html
+++ b/kodebook.html
@@ -1,4 +1,9 @@
+<link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+<Link rel="stylesheet" href="foler/folder/animate.min.css">
 <nav class="navbar navbar-expand-lg navbar-light bg-info">
     <a class="navbar-brand" href="#">
       <img src="pickupln.jpg" alt="" style="width:50px;"> PICKUPLN
@@ -12,13 +17,13 @@
     </div>
   </nav>
   <div class="jumbotron jumbotron-fluid " style="background-color: #f48220">
-    <div class="padding container-fluid d-flex justify-content-center">
+    <div class="padding container-fluid d-flex justify-content-center animate__animated animate__backInDown">
         <div class="col-md-4">
             <div class="free-quote bg-dark h-100">
                 <h2 class="my-4 heading text-center">Masukkan Kode Voucher</h2>
                 <form method="post">
                     <div class="form-group"> <label for="fq_name"></label> <input type="text" class="form-control btn-block" id="fq_name" name="fq_name" placeholder=""> </div>
-                    <div class="form-group"> <input type="submit" class="btn btn-primary text-white py-2 px-4 btn-block" value="SUBMIT"> </div>
+                       <CENTER><p><a href="ditemukan.html" class="btn btn-primary btn-lg"> Submit</a></CENTER>
                 </form>
             </div>
         </div>
