--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <Link rel="stylesheet" href="foler/folder/animate.min.css">
   
 <nav class="navbar navbar-expand-lg navbar-light bg-info">
-      <img src="pickupln.jpg" alt="" style="width:50px;"> PICKUPLN
+      <img src="pickupln.jpg" alt="" style="width:50px;">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
